--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,15 +8,22 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.lhy.comm"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags "-frtti -fexceptions"
+                cppFlags "-std=c++11 -frtti -fexceptions"
             }
+        }
+        ndk {
+            // Specifies the ABI configurations of your native
+            // libraries Gradle should build and package with your APK.
+//            abiFilters "x86_64", "armeabi-v7a" "arm64-v8a"
+//            abiFilters "arm64-v8a"
+            abiFilters "armeabi"
         }
     }
     buildTypes {
@@ -34,6 +41,7 @@ android {
 
 dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.tencent.mars:mars-xlog:1.0.6'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
