--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,13 +40,15 @@ android {
 }
 
 dependencies {
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.tencent.mars:mars-xlog:1.0.6'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.tencent.mars:mars-xlog:1.0.6'
+    implementation 'com.alibaba:fastjson:1.1.54.android'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
+
 
 }
