--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
             // libraries Gradle should build and package with your APK.
 //            abiFilters "x86_64", "armeabi-v7a" "arm64-v8a"
 //            abiFilters "arm64-v8a"
-            abiFilters "armeabi"
+            abiFilters "x86_64", "armeabi"
         }
     }
     buildTypes {
