--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:screenOrientation="portrait" >
         </activity>
 
+        <activity
+            android:name="com.lhy.comm.ui.DynamicActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.lhy.comm.fileprovider"
